feat: user detail
